# android-Camera2Basic-master

./: local.properties  settings.gradle
Application/: CMakeLists.txt  build.gradle
Application/src/main/: AndroidManifest.xml
Application/src/main/assets/: hass_kernels.cl  raw2y.cl
Application/src/main/cpp/: OpenCLexample1.cpp  conversion.cpp  conversion.h  hassproc.cpp  hassproc.h  hello-jnicallback.cpp  imgproc-lib.cpp  log.h  native-lib.cpp  openCLNR.cpp  types.h  usb3.c
Application/src/main/java/com/example/android/camera2basic/: ALSSensor.java  Camera2BasicFragment.java  CameraActivity.java  Commander.java  Display.java  Exposure.java  GPIO.java  GPS.java  GpuImageProcessing.java  HassImage.java  HassSensor.java  IRLED.java  ImageProcessing.java  JniHandler.java  LED.java  Monitor.java  OverheatProtection.java  RefCountedAutoCloseable.java  Register.java  Sensor.java  SettingsFragment.java  Status.java  Storage.java  Thermal.java  USB.java
Application/src/main/res/values/: ids.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary342/: build.gradle
